--- a/page-list.html
+++ b/page-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1677708876971">
+		<link rel="stylesheet" href="./css/main.css?v=1677799533533">
 	</head>
 	<body>
 		<!-- Header-->
@@ -47,12 +47,12 @@
 								</svg>
 							</div>
 							<ul class="dropdown__options-list">
-								<li class="dropdown__option dropdown__option--selected">
+								<li class="dropdown__option dropdown__option--selected" data-value="Русский">
 									<svg class="dropdown__flag">
 										<use xlink:href="#flag-ru"></use>
 									</svg>Русский
 								</li>
-								<li class="dropdown__option">
+								<li class="dropdown__option" data-value="English">
 									<svg class="dropdown__flag">
 										<use xlink:href="#flag-ru"></use>
 									</svg>English
@@ -88,6 +88,11 @@
 					<li class="list-arrow__elem"><a href="industry.html" target="_blank">Карточка индустрии</a></li>
 					<li class="list-arrow__elem"><a href="404.html" target="_blank">404</a></li>
 					<li class="list-arrow__elem"><a href="press-list.html" target="_blank">Пресс-релизы</a></li>
+					<li class="list-arrow__elem">-----------------------------------</li>
+					<li class="list-arrow__elem"><a href="press-item.html" target="_blank">Пресс-релиз</a></li>
+					<li class="list-arrow__elem"><a href="career.html" target="_blank">Карьера</a></li>
+					<li class="list-arrow__elem"><a href="career-list.html" target="_blank">Список вакансий</a></li>
+					<li class="list-arrow__elem"><a href="career-item.html" target="_blank">Карточка вакансии</a></li>
 				</ul>
 			</section>
 		</main>
@@ -155,8 +160,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1677708876972"></script>
-		<script src="./js/main.js?v=1677708876972"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1677799533533"></script>
+		<script src="./js/main.js?v=1677799533533"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="telegram">
 		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
 		<path d="M33.4399 18.6223L30.2711 33.566C30.0319 34.6205 29.4086 34.883 28.5229 34.3865L23.6944 30.8285L21.3649 33.0695C21.1069 33.3275 20.8916 33.5428 20.3944 33.5428L20.7416 28.6258L29.6899 20.54C30.0791 20.1935 29.6051 20.0008 29.0854 20.348L18.0229 27.314L13.2604 25.823C12.2246 25.4998 12.2059 24.7873 13.4764 24.29L32.1041 17.1133C32.9666 16.79 33.7211 17.3053 33.4399 18.623V18.6223Z" fill="white"></path>
@@ -184,6 +189,9 @@
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 24" id="chevron-list-blue">
+		<path d="M3 21L12 12L3 3" stroke="#004996" stroke-width="5" stroke-linecap="round"></path>
+	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 36" id="chevron-right">
 		<path d="M2 34L18 18L2 2" stroke="currentColor" stroke-width="4" stroke-linecap="round"></path>
 	</symbol>
@@ -192,6 +200,9 @@
 	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 24" id="chevron-slider">
 		<path d="M2.8 24L0 21.2L9.2 12L0 2.8L2.8 0L14.8 12L2.8 24Z" fill="currentColor"></path>
+	</symbol>
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="fire">
+		<path d="M16.5 8.00004C16.5 9.50004 16 11.5 13.6 12.3C14.3 10.6 14.4 8.90004 13.9 7.30004C13.2 5.20004 10.9 3.60004 9.3 2.70004C8.9 2.40004 8.2 2.80004 8.3 3.40004C8.3 4.50004 8 6.10004 6.3 7.80004C4.1 10 3 12.3 3 14.5C3 17.4 5 21 9 21C5 17 8 13.5 8 13.5C8.8 19.4 13 21 15 21C16.7 21 20 19.8 20 14.6C20 11.5 18.7 9.10004 17.6 7.70004C17.3 7.20004 16.6 7.50004 16.5 8.00004Z" fill="#E10000"></path>
 	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="flag-ru">
 		<path d="M0 9.375H24V14.625H0V9.375Z" fill="#1B75BB"></path>
