--- a/department.html
+++ b/department.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
 		<meta name="description" content="Описание">
-		<title>Индустрии</title>
+		<title>Отдел службы качества</title>
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1677808769469">
+		<link rel="stylesheet" href="./css/main.css?v=1678063461930">
 	</head>
 	<body>
 		<!-- Header-->
@@ -81,103 +81,127 @@
 			</div>
 		</header>
 		<main>
-			<!-- Breadcrumbs-->
-			<div class="breadcrumb container">
-				<ul class="breadcrumb__list">
-					<li class="breadcrumb__item">
-						<!-- if breadcrumb is single--><a class="breadcrumb__link" href="#" title="Главная">Главная</a>
-						<svg class="breadcrumb__arrow">
-							<use xlink:href="#chevron-right"></use>
-						</svg>
-					</li>
-					<li class="breadcrumb__item"><span class="breadcrumb__current">Индустрии</span></li>
-				</ul>
-			</div>
-			<!-- Section Industries-->
-			<section class="section-industries container">
-				<h1 class="h1 text-blue section-industries__title">Индустрии</h1>
-				<p class="section-industries__description">Обладаем экспертизой в различных областях, что делает нас профессионалами.</p>
-				<div class="section-industries__grid">
-					<!-- Card--><a class="section-industries__card section-industries__card--top card card--text-top" href="#">
-						<div class="card__text-box">
-							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
-						</div>
-						<div class="card__title-box">
-							<p class="card__title">Fashion</p>
-						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
-						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg1.jpg" alt></div></a>
-					<!-- Card--><a class="section-industries__card section-industries__card--top-wide card card--text-top" href="#">
-						<div class="card__text-box">
-							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
-							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
-						</div>
-						<div class="card__title-box">
-							<p class="card__title">Healthcare</p>
-						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
-						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg2.jpg" alt></div></a>
-					<!-- Card--><a class="section-industries__card section-industries__card--top card card--text-top" href="#">
-						<div class="card__text-box">
-							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
-						</div>
-						<div class="card__title-box">
-							<p class="card__title">Automotive</p>
-						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
-						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg3.jpg" alt></div></a>
-					<!-- Card--><a class="section-industries__card section-industries__card--bottom-wide card card--text-top" href="#">
-						<div class="card__text-box">
-							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
-							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
-						</div>
-						<div class="card__title-box">
-							<p class="card__title">FMCG</p>
-						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
-						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg4.jpg" alt></div></a>
-					<!-- Card--><a class="section-industries__card section-industries__card--bottom card card--text-top" href="#">
-						<div class="card__text-box">
-							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
-						</div>
-						<div class="card__title-box">
-							<p class="card__title">Telecom</p>
-						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
-						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg5.jpg" alt></div></a>
-					<!-- Card--><a class="section-industries__card section-industries__card--bottom-wide card card--text-top" href="#">
-						<div class="card__text-box">
-							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
-							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
-						</div>
-						<div class="card__title-box">
-							<p class="card__title">POSM</p>
-						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
-						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg6.jpg" alt></div></a>
-				</div>
-			</section>
-			<!-- Section Invite-->
-			<div class="section-invite">
+			<!-- Section Hero-->
+			<section class="section-hero section-hero--with-cards section-hero--department">
 				<div class="container">
-					<div class="section-invite__row">
-						<div class="section-invite__col">
-							<!-- Card--><a class="section-invite__card" href="#">
-								<div class="section-invite__card-content">
-									<p class="section-invite__card-title">Вебинары</p>
-									<p class="section-invite__card-text">Познакомьтесь с современными тенденциями складской деятельности в режиме онлайн</p>
-								</div>
-								<svg class="section-invite__card-arrow">
-									<use xlink:href="#chevron-right-big"></use>
-								</svg></a>
-						</div>
-						<div class="section-invite__col">
-							<!-- Card--><a class="section-invite__card" href="#">
-								<div class="section-invite__card-content">
-									<p class="section-invite__card-title">Наши кейсы</p>
-									<p class="section-invite__card-text">Изучите наш опыт в сфере складской логистики и получите похожее решение</p>
-								</div>
-								<svg class="section-invite__card-arrow">
-									<use xlink:href="#chevron-right-big"></use>
-								</svg></a>
+					<!-- Breadcrumbs-->
+					<div class="breadcrumb section-hero__breadcrumb breadcrumb--white">
+						<ul class="breadcrumb__list">
+							<li class="breadcrumb__item">
+								<!-- if breadcrumb is single--><a class="breadcrumb__link" href="#" title="Главная">Главная</a>
+								<svg class="breadcrumb__arrow">
+									<use xlink:href="#chevron-right"></use>
+								</svg>
+							</li>
+							<li class="breadcrumb__item"><span class="breadcrumb__current">Устойчивое развитие</span></li>
+						</ul>
+					</div>
+					<h1 class="section-hero__title">Отдел службы качества</h1>
+					<p class="section-hero__text">Многоуровневая система контроля и анализа деятельности</p><img class="section-hero__bg" src="images/section-hero/bg1.jpg" alt>
+					<!-- Results-->
+					<div class="section-hero__results-row results results--white-line">
+						<div class="results__row">
+							<!-- Col-->
+							<div class="results__col">
+								<p class="results__value">98,75%</p>
+								<p class="results__text">Своевременность приемки</p>
+							</div>
+							<!-- Col-->
+							<div class="results__col">
+								<p class="results__value">99,25%</p>
+								<p class="results__text">Точность подготовки заказа</p>
+							</div>
+							<!-- Col-->
+							<div class="results__col">
+								<p class="results__value">NPS - 93%</p>
+								<p class="results__text">Чистый индекс поддержки<br>клиентов</p>
+							</div>
+							<!-- Col-->
+							<div class="results__col">
+								<p class="results__value">96%</p>
+								<p class="results__text">Удовлетворенность<br>клиентов</p>
+							</div>
 						</div>
 					</div>
+					<!-- Cards-->
+					<div class="section-hero__card-row">
+						<article class="section-hero__card">
+							<h2 class="section-hero__card-title">ISO 13485:2017</h2>
+							<p class="section-hero__card-text">Соответсуствуем требованиям<br>производителей медицинских изделий</p>
+						</article>
+						<article class="section-hero__card">
+							<h2 class="section-hero__card-title">ISO 9001:2015</h2>
+							<p class="section-hero__card-text">Certificate No.: RU004490 Bureau Veritas,<br>UKAS management system</p>
+						</article>
+					</div>
 				</div>
+			</section>
+			<!-- Section Actions-->
+			<div class="section-actions container">
+				<section class="section-actions__col">
+					<h2 class="section-actions__title">Самоинспекция складских площадок</h2>
+					<ul class="section-actions__list">
+						<li class="section-actions__list-elem">Документирование</li>
+						<li class="section-actions__list-elem">Зонирование</li>
+						<li class="section-actions__list-elem">Санитарное состояние</li>
+					</ul>
+					<ul class="section-actions__list">
+						<li class="section-actions__list-elem">Обращение с товаром</li>
+						<li class="section-actions__list-elem">Инфраструктура</li>
+						<li class="section-actions__list-elem">Оборудование</li>
+					</ul>
+				</section>
+				<section class="section-actions__col">
+					<h2 class="section-actions__title">Проведение внутренних аудитов</h2>
+					<ul class="section-actions__list">
+						<li class="section-actions__list-elem">Документирование</li>
+						<li class="section-actions__list-elem">Зонирование</li>
+						<li class="section-actions__list-elem">Санитарное состояние</li>
+					</ul>
+					<ul class="section-actions__list">
+						<li class="section-actions__list-elem">Обращение с товаром</li>
+						<li class="section-actions__list-elem">Инфраструктура</li>
+						<li class="section-actions__list-elem">Оборудование</li>
+					</ul>
+				</section>
+				<section class="section-actions__col">
+					<h2 class="section-actions__title section-actions__title--low-margin">Corrective and preventive action</h2>
+					<p class="section-actions__text">Температурный режим хранения, выполнение согласованного регламента по обращению с товарами, требующими особых условий хранения и обработки</p>
+				</section>
+				<section class="section-actions__col">
+					<h2 class="section-actions__title section-actions__title--low-margin">Обратная связь</h2>
+					<p class="section-actions__text">Регулярные опросы действующих клиентов о качестве сервиса</p>
+				</section>
 			</div>
+			<!-- Section Contacts-->
+			<section class="section-contacts">
+				<div class="container">
+					<h2 class="h2 text-white section-contacts__title">Есть вопросы? Свяжитесь с нами!</h2>
+					<form class="section-contacts__form">
+						<div class="section-contacts__form-row">
+							<div class="section-contacts__form-col section-contacts__form-col--inputs">
+								<div class="section-contacts__input-box">
+									<input class="form-control section-contacts__form-input" type="text" placeholder="Имя">
+								</div>
+								<div class="section-contacts__input-box">
+									<input class="form-control section-contacts__form-input" type="tel" placeholder="*Телефон">
+								</div>
+								<div class="section-contacts__input-box">
+									<input class="form-control section-contacts__form-input" type="email" placeholder="*Адрес электронной почты">
+								</div>
+							</div>
+							<div class="section-contacts__form-col section-contacts__form-col--message">
+								<div class="section-contacts__textarea-box">
+									<textarea class="form-control form-control--textarea section-contacts__form-textarea" placeholder="*Комментарий..."></textarea>
+								</div>
+							</div>
+						</div>
+						<div class="section-contacts__form-submit-box">
+							<button class="button button--white button--lg section-contacts__form-submit">Отправить</button>
+						</div>
+					</form>
+				</div>
+			</section>
 		</main>
 		<!-- Footer-->
 		<footer class="footer">
@@ -243,8 +267,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1677808769470"></script>
-		<script src="./js/main.js?v=1677808769470"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1678063461931"></script>
+		<script src="./js/main.js?v=1678063461931"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="telegram">
 		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
 		<path d="M33.4399 18.6223L30.2711 33.566C30.0319 34.6205 29.4086 34.883 28.5229 34.3865L23.6944 30.8285L21.3649 33.0695C21.1069 33.3275 20.8916 33.5428 20.3944 33.5428L20.7416 28.6258L29.6899 20.54C30.0791 20.1935 29.6051 20.0008 29.0854 20.348L18.0229 27.314L13.2604 25.823C12.2246 25.4998 12.2059 24.7873 13.4764 24.29L32.1041 17.1133C32.9666 16.79 33.7211 17.3053 33.4399 18.623V18.6223Z" fill="white"></path>
