--- a/industry-list.html
+++ b/industry-list.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
 		<meta name="description" content="Описание">
-		<title>Карточка вакансии</title>
+		<title>Индустрии</title>
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1678063461332">
+		<link rel="stylesheet" href="./css/main.css?v=1678063462286">
 	</head>
 	<body>
 		<!-- Header-->
@@ -90,103 +90,94 @@
 							<use xlink:href="#chevron-right"></use>
 						</svg>
 					</li>
-					<li class="breadcrumb__item"><span class="breadcrumb__current">Вакансии</span></li>
+					<li class="breadcrumb__item"><span class="breadcrumb__current">Индустрии</span></li>
 				</ul>
 			</div>
-			<!-- Section Vacancy item-->
-			<section class="section-vacancy-item">
+			<!-- Section Industries-->
+			<section class="section-industries container">
+				<h1 class="h1 text-blue section-industries__title">Индустрии</h1>
+				<p class="section-industries__description">Обладаем экспертизой в различных областях, что делает нас профессионалами.</p>
+				<div class="section-industries__grid">
+					<!-- Card--><a class="section-industries__card section-industries__card--top card card--text-top" href="#">
+						<div class="card__text-box">
+							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
+						</div>
+						<div class="card__title-box">
+							<p class="card__title">Fashion</p>
+						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg1.jpg" alt></div></a>
+					<!-- Card--><a class="section-industries__card section-industries__card--top-wide card card--text-top" href="#">
+						<div class="card__text-box">
+							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
+							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
+						</div>
+						<div class="card__title-box">
+							<p class="card__title">Healthcare</p>
+						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg2.jpg" alt></div></a>
+					<!-- Card--><a class="section-industries__card section-industries__card--top card card--text-top" href="#">
+						<div class="card__text-box">
+							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
+						</div>
+						<div class="card__title-box">
+							<p class="card__title">Automotive</p>
+						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg3.jpg" alt></div></a>
+					<!-- Card--><a class="section-industries__card section-industries__card--bottom-wide card card--text-top" href="#">
+						<div class="card__text-box">
+							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
+							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
+						</div>
+						<div class="card__title-box">
+							<p class="card__title">FMCG</p>
+						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg4.jpg" alt></div></a>
+					<!-- Card--><a class="section-industries__card section-industries__card--bottom card card--text-top" href="#">
+						<div class="card__text-box">
+							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
+						</div>
+						<div class="card__title-box">
+							<p class="card__title">Telecom</p>
+						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg5.jpg" alt></div></a>
+					<!-- Card--><a class="section-industries__card section-industries__card--bottom-wide card card--text-top" href="#">
+						<div class="card__text-box">
+							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
+							<p class="card__text">Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.</p>
+						</div>
+						<div class="card__title-box">
+							<p class="card__title">POSM</p>
+						</div><span class="button button--white button--xs card__btn-more">Подробнее</span>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-ready/bg6.jpg" alt></div></a>
+				</div>
+			</section>
+			<!-- Section Invite-->
+			<div class="section-invite">
 				<div class="container">
-					<h2 class="h2 text-blue section-vacancy-item__title">Вакансии по рекламациям, Москва</h2>
-					<div class="section-vacancy-item__description">
-						<p class="section-vacancy-item__salary">от 99 000 ₽ / мес.</p>
-						<button class="button button--blue button--sm button--text-big section-vacancy-item__button">Оставить заявку</button>
-						<p class="section-vacancy-item__date">Размещено: 3 дня назад</p>
-					</div>
-					<!-- Panel-->
-					<div class="section-vacancy-item__panel">
-						<h3 class="section-vacancy-item__panel-title">Обязанности</h3>
-						<div class="section-vacancy-item__panel-row">
-							<ul class="list-arrow list-arrow--blue section-vacancy-item__panel-list">
-								<li class="list-arrow__elem">Планирование и организация международных контейнерных перевозок</li>
-								<li class="list-arrow__elem">Контроль собственного контейнерного парка, организация</li>
-								<li class="list-arrow__elem">Взаимодействие с транспортными компаниями РФ, и иностранными агентами</li>
-							</ul>
-							<ul class="list-arrow list-arrow--blue section-vacancy-item__panel-list">
-								<li class="list-arrow__elem">Планирование и организация международных контейнерных перевозок</li>
-								<li class="list-arrow__elem">Контроль собственного контейнерного парка, организация</li>
-								<li class="list-arrow__elem">Взаимодействие с транспортными компаниями РФ, и иностранными агентами</li>
-							</ul>
+					<div class="section-invite__row">
+						<div class="section-invite__col">
+							<!-- Card--><a class="section-invite__card" href="#">
+								<div class="section-invite__card-content">
+									<p class="section-invite__card-title">Вебинары</p>
+									<p class="section-invite__card-text">Познакомьтесь с современными тенденциями складской деятельности в режиме онлайн</p>
+								</div>
+								<svg class="section-invite__card-arrow">
+									<use xlink:href="#chevron-right-big"></use>
+								</svg></a>
 						</div>
-					</div>
-					<!-- Panel-->
-					<div class="section-vacancy-item__panel">
-						<h3 class="section-vacancy-item__panel-title">Требования</h3>
-						<div class="section-vacancy-item__panel-row">
-							<ul class="list-arrow list-arrow--blue section-vacancy-item__panel-list">
-								<li class="list-arrow__elem">Знание рынка контейнерных перевозок</li>
-								<li class="list-arrow__elem">Знание систем слежения и дислокации ЖД вагонов и контейнеров кругооборота парка и его полной загрузки на каждом плече</li>
-								<li class="list-arrow__elem">Знание специализированных программ по контролю за контейнерным оборудованием</li>
-							</ul>
-							<ul class="list-arrow list-arrow--blue section-vacancy-item__panel-list">
-								<li class="list-arrow__elem">Опыт работы с контейнерами не менее 3 лет</li>
-								<li class="list-arrow__elem">Знание английского языка от Upper-Intermediate</li>
-								<li class="list-arrow__elem">Готовность работать с цифрами и массивами данных</li>
-							</ul>
-						</div>
-					</div>
-					<!-- Panel-->
-					<div class="section-vacancy-item__panel">
-						<h3 class="section-vacancy-item__panel-title">Условия работы</h3>
-						<div class="section-vacancy-item__panel-row">
-							<ul class="list-arrow list-arrow--blue section-vacancy-item__panel-list">
-								<li class="list-arrow__elem">График 5/2, с 9-00 до 18-00, с перерывом на обед</li>
-								<li class="list-arrow__elem">Реальные перспективы карьерного и профессионального роста</li>
-								<li class="list-arrow__elem">Оформление по ТК РФ</li>
-								<li class="list-arrow__elem">Корпоративный транспорт: из Москвы от м. Строгино (30 минут), из Красногорска, из Нахабино, из Истры</li>
-								<li class="list-arrow__elem">Работа в молодой команде профессионалов</li>
-							</ul>
+						<div class="section-invite__col">
+							<!-- Card--><a class="section-invite__card" href="#">
+								<div class="section-invite__card-content">
+									<p class="section-invite__card-title">Наши кейсы</p>
+									<p class="section-invite__card-text">Изучите наш опыт в сфере складской логистики и получите похожее решение</p>
+								</div>
+								<svg class="section-invite__card-arrow">
+									<use xlink:href="#chevron-right-big"></use>
+								</svg></a>
 						</div>
 					</div>
 				</div>
-			</section>
-			<!-- Section Contacts-->
-			<section class="section-contacts section-contacts--blue section-contacts--job">
-				<div class="container">
-					<h2 class="text-white section-contacts__title">Есть вопросы? Свяжитесь с нами!<span class="section-contacts__call-text">
-							Или позвоните нам:
-							<a class="section-contacts__call-link" href="tel:+74951112233">+7 (495) 111-22-33</a></span></h2>
-					<form class="section-contacts__form">
-						<div class="section-contacts__form-row">
-							<div class="section-contacts__form-col section-contacts__form-col--inputs">
-								<div class="section-contacts__input-box">
-									<input class="form-control section-contacts__form-input" type="text" placeholder="Имя">
-								</div>
-								<div class="section-contacts__input-box">
-									<input class="form-control section-contacts__form-input" type="tel" placeholder="*Телефон">
-								</div>
-								<div class="section-contacts__input-box">
-									<input class="form-control section-contacts__form-input" type="email" placeholder="*Адрес электронной почты">
-								</div>
-							</div>
-							<div class="section-contacts__form-col section-contacts__form-col--message">
-								<div class="section-contacts__textarea-box">
-									<textarea class="form-control form-control--textarea section-contacts__form-textarea" placeholder="*Комментарий..."></textarea>
-								</div>
-							</div>
-						</div>
-						<div class="section-contacts__form-submit-box">
-							<div class="section-contacts__form-col section-contacts__form-col--inputs">
-								<button class="button button--white button--lg section-contacts__form-submit">Отправить</button>
-							</div>
-							<div class="section-contacts__form-col section-contacts__form-col--message">
-								<p class="section-contacts__form-upload-text">Загрузите Ваше резюме –  это повысит шансы на ответ</p>
-								<input class="section-contacts__form-upload-input" id="upload" type="file">
-								<label class="section-contacts__form-upload-label" for="upload">Загрузить файл</label>
-							</div>
-						</div>
-					</form>
-				</div>
-			</section>
+			</div>
 		</main>
 		<!-- Footer-->
 		<footer class="footer">
@@ -252,8 +243,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1678063461332"></script>
-		<script src="./js/main.js?v=1678063461332"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1678063462287"></script>
+		<script src="./js/main.js?v=1678063462287"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="telegram">
 		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
 		<path d="M33.4399 18.6223L30.2711 33.566C30.0319 34.6205 29.4086 34.883 28.5229 34.3865L23.6944 30.8285L21.3649 33.0695C21.1069 33.3275 20.8916 33.5428 20.3944 33.5428L20.7416 28.6258L29.6899 20.54C30.0791 20.1935 29.6051 20.0008 29.0854 20.348L18.0229 27.314L13.2604 25.823C12.2246 25.4998 12.2059 24.7873 13.4764 24.29L32.1041 17.1133C32.9666 16.79 33.7211 17.3053 33.4399 18.623V18.6223Z" fill="white"></path>
