--- a/page-list.html
+++ b/page-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1677808769832">
+		<link rel="stylesheet" href="./css/main.css?v=1678063462668">
 	</head>
 	<body>
 		<!-- Header-->
@@ -84,15 +84,22 @@
 			<section style="display:flex;padding:100px;">
 				<ul class="list-arrow list-arrow--red" style="margin:auto">
 					<li class="list-arrow__elem"><a href="index.html" target="_blank">Главная</a></li>
-					<li class="list-arrow__elem"><a href="industries.html" target="_blank">Индустрии</a></li>
-					<li class="list-arrow__elem"><a href="industry.html" target="_blank">Карточка индустрии</a></li>
 					<li class="list-arrow__elem"><a href="404.html" target="_blank">404</a></li>
-					<li class="list-arrow__elem"><a href="press-list.html" target="_blank">Пресс-релизы</a></li>
 					<li class="list-arrow__elem">-----------------------------------</li>
+					<li class="list-arrow__elem"><a href="industry-list.html" target="_blank">Индустрии</a></li>
+					<li class="list-arrow__elem"><a href="industry.html" target="_blank">Карточка индустрии</a></li>
+					<li class="list-arrow__elem">-----------------------------------</li>
+					<li class="list-arrow__elem"><a href="service-list.html" target="_blank">Услуги</a></li>
+					<li class="list-arrow__elem"><a href="service.html" target="_blank">Услуга</a></li>
+					<li class="list-arrow__elem">-----------------------------------</li>
+					<li class="list-arrow__elem"><a href="press-list.html" target="_blank">Пресс-релизы</a></li>
 					<li class="list-arrow__elem"><a href="press-item.html" target="_blank">Пресс-релиз</a></li>
+					<li class="list-arrow__elem">-----------------------------------</li>
 					<li class="list-arrow__elem"><a href="career.html" target="_blank">Карьера</a></li>
 					<li class="list-arrow__elem"><a href="career-list.html" target="_blank">Список вакансий</a></li>
 					<li class="list-arrow__elem"><a href="career-item.html" target="_blank">Карточка вакансии</a></li>
+					<li class="list-arrow__elem">-----------------------------------</li>
+					<li class="list-arrow__elem"><a href="department.html" target="_blank">Отдел службы качества</a></li>
 				</ul>
 			</section>
 		</main>
@@ -160,8 +167,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1677808769832"></script>
-		<script src="./js/main.js?v=1677808769832"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1678063462669"></script>
+		<script src="./js/main.js?v=1678063462669"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="telegram">
 		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
 		<path d="M33.4399 18.6223L30.2711 33.566C30.0319 34.6205 29.4086 34.883 28.5229 34.3865L23.6944 30.8285L21.3649 33.0695C21.1069 33.3275 20.8916 33.5428 20.3944 33.5428L20.7416 28.6258L29.6899 20.54C30.0791 20.1935 29.6051 20.0008 29.0854 20.348L18.0229 27.314L13.2604 25.823C12.2246 25.4998 12.2059 24.7873 13.4764 24.29L32.1041 17.1133C32.9666 16.79 33.7211 17.3053 33.4399 18.623V18.6223Z" fill="white"></path>
