--- a/press-item.html
+++ b/press-item.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1677808769977">
+		<link rel="stylesheet" href="./css/main.css?v=1678063462820">
 	</head>
 	<body>
 		<!-- Header-->
@@ -147,22 +147,30 @@
 				</div>
 			</section>
 			<!-- Section Contacts-->
-			<section class="section-contacts section-contacts--blue">
+			<section class="section-contacts">
 				<div class="container">
-					<h2 class="text-white section-contacts__title">Есть вопросы? Свяжитесь с нами!</h2>
+					<h2 class="h2 text-white section-contacts__title">Есть вопросы? Свяжитесь с нами!</h2>
 					<form class="section-contacts__form">
 						<div class="section-contacts__form-row">
 							<div class="section-contacts__form-col section-contacts__form-col--inputs">
-								<input class="form-control form-control--round section-contacts__form-input" type="text" placeholder="Имя">
-								<input class="form-control form-control--round section-contacts__form-input" type="tel" placeholder="*Телефон">
-								<input class="form-control form-control--round section-contacts__form-input" type="email" placeholder="*Адрес электронной почты">
+								<div class="section-contacts__input-box">
+									<input class="form-control section-contacts__form-input" type="text" placeholder="Имя">
+								</div>
+								<div class="section-contacts__input-box">
+									<input class="form-control section-contacts__form-input" type="tel" placeholder="*Телефон">
+								</div>
+								<div class="section-contacts__input-box">
+									<input class="form-control section-contacts__form-input" type="email" placeholder="*Адрес электронной почты">
+								</div>
 							</div>
 							<div class="section-contacts__form-col section-contacts__form-col--message">
-								<textarea class="form-control form-control--round form-control--textarea section-contacts__form-textarea" placeholder="*Комментарий..."></textarea>
+								<div class="section-contacts__textarea-box">
+									<textarea class="form-control form-control--textarea section-contacts__form-textarea" placeholder="*Комментарий..."></textarea>
+								</div>
 							</div>
 						</div>
 						<div class="section-contacts__form-submit-box">
-							<button class="button button--outline-white button--lg section-contacts__form-submit">Отправить</button>
+							<button class="button button--white button--lg section-contacts__form-submit">Отправить</button>
 						</div>
 					</form>
 				</div>
@@ -232,8 +240,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1677808769977"></script>
-		<script src="./js/main.js?v=1677808769977"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1678063462821"></script>
+		<script src="./js/main.js?v=1678063462821"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="telegram">
 		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
 		<path d="M33.4399 18.6223L30.2711 33.566C30.0319 34.6205 29.4086 34.883 28.5229 34.3865L23.6944 30.8285L21.3649 33.0695C21.1069 33.3275 20.8916 33.5428 20.3944 33.5428L20.7416 28.6258L29.6899 20.54C30.0791 20.1935 29.6051 20.0008 29.0854 20.348L18.0229 27.314L13.2604 25.823C12.2246 25.4998 12.2059 24.7873 13.4764 24.29L32.1041 17.1133C32.9666 16.79 33.7211 17.3053 33.4399 18.623V18.6223Z" fill="white"></path>
